--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     text-decoration: none;
     list-style: none;
 }
+#text{
+    color: #fff;
+    padding-left: 40px;
+    font-size: 20px;
+}
 .section-1{
     width: 100%;
     height: 100vh;
